--- a/product-14.html
+++ b/product-14.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bonsai Tree</title>
+    <title>Hydrangea</title>
     <link rel="stylesheet " href="css-files/home.css">
     <link rel="stylesheet " href="css-files/product.css">
 </head>
 <body>
     <nav class="navbar"></nav>
-    
-    <section class="product-details">
+    <!-- <section class="product-details">
         <div class="product-images">
-            <img src="img/bonsai.png" class="active" alt="">
+            <img src="img/hydrangea.png" class="active" alt="">
         </div>
         <div class="details">
-            <h2 class="product-brand">Bonsai Tree</h2>
-            <p class="product-short-des">Bonsai trees are miniature versions of larger trees and are associated with patience and tranquility. They're often gifted for their aesthetic and symbolic value.
+            <h2 class="product-brand">Hydrangea</h2>
+            <p class="product-short-des">The hydrangea flower is a symbol of appreciation, elegance, and beauty. The lavish amount of blooms and the spacious spherical shape also give off an aura of abundance. Its hues symbolize peace, harmony, and love. This stunning bouquet of hydrangea flowers is sure to make anyone smile, no matter the occasion!
             </p>
             <span class="product-price">₱450</span>
             <span class="product-actual-price">₱500</span>
-            <span class="product-discount">10% off!</span>  
+            <span class="product-discount">10% off!</span>
 
             <button class="btn cart-btn">buy now</button>
             <button class="btn">add to cart</button>
         </div>
-    </section>
-
+    </section> -->
+    <div id="flower-details" class="product-details">
+        <!-- Content will be dynamically added here using JavaScript -->
+    </div>
    
 
     <!------------- Product catalog ----------------------->
@@ -35,43 +36,19 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">15% off</span>
-                    <a href="product-booklover.html"><img src="img/booklover.png" class="product-thumb" alt=""></a>
+                    <span class="discount-tag">10% off</span>
+                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">book lover gift set</h2>
+                    <h2 class="product-brand">Roses</h2>
                     <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">15% off</span>
-                    <a href="product-fiddle.html"><img src="img/fiddle.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">fiddle leaf tree</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">15% off</span>
-                    <a href="product-orchid.html"><img src="img/orchid.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">orchid</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">15% off</span>
+                    <span class="discount-tag">10% off</span>
                     <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
@@ -83,8 +60,8 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">15% off</span>
-                    <a href="product-redrose.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
+                    <span class="discount-tag">10% off</span>
+                    <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -95,19 +72,55 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">15% off</span>
-                    <a href="product-travel.html"><img src="img/travel.png" class="product-thumb" alt=""></a>
+                    <span class="discount-tag">10% off</span>
+                    <a href="product-gourmet.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">travel gift set</h2>
+                    <h2 class="product-brand">gourmet gift set</h2>
                     <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">15% off</span>
+                    <span class="discount-tag">10% off</span>
+                    <a href="product-tulip.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Tulips</h2>
+                    <p class="product-short-des">From Pobeguada</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">hydrangea</h2>
+                    <p class="product-short-des">From Pobeguada</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
+                    <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">wildflower</h2>
+                    <p class="product-short-des">From Pobeguada</p>
+                    <span class="price">₱450</span><span class="actual-price">₱500</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag">10% off</span>
                     <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
@@ -128,6 +141,15 @@
     <script src="js-files/home.js"></script>
     <script src="js-files/product.js"></script>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const flowerId = parseInt(urlParams.get('id')) || 14;
+
+            // Call the function with the specific flower ID
+            renderFlowerDetailsById(flowerId);
+        });
+    </script>
 
 </body>
 </html>
