--- a/product-3.html
+++ b/product-3.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Orchid</title>
+    <title>Hydrangea</title>
     <link rel="stylesheet " href="css-files/home.css">
     <link rel="stylesheet " href="css-files/product.css">
 </head>
 <body>
     <nav class="navbar"></nav>
-    
-    <section class="product-details">
+    <!-- <section class="product-details">
         <div class="product-images">
-            <img src="img/orchid.png" class="active" alt="">
+            <img src="img/hydrangea.png" class="active" alt="">
         </div>
         <div class="details">
-            <h2 class="product-brand">Orchid Plant</h2>
-            <p class="product-short-des">Orchids are renowned for their beauty and elegance. They are a popular choice for special occasions and can bloom for an extended period with proper care.</p>
+            <h2 class="product-brand">Hydrangea</h2>
+            <p class="product-short-des">The hydrangea flower is a symbol of appreciation, elegance, and beauty. The lavish amount of blooms and the spacious spherical shape also give off an aura of abundance. Its hues symbolize peace, harmony, and love. This stunning bouquet of hydrangea flowers is sure to make anyone smile, no matter the occasion!
+            </p>
             <span class="product-price">₱450</span>
             <span class="product-actual-price">₱500</span>
             <span class="product-discount">10% off!</span>
@@ -22,8 +22,10 @@
             <button class="btn cart-btn">buy now</button>
             <button class="btn">add to cart</button>
         </div>
-    </section>
-
+    </section> -->
+    <div id="flower-details" class="product-details">
+        <!-- Content will be dynamically added here using JavaScript -->
+    </div>
    
 
     <!------------- Product catalog ----------------------->
@@ -35,7 +37,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
+                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -47,7 +49,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
+                    <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -59,7 +61,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
+                    <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -71,7 +73,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
+                    <a href="product-gourmet.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -83,7 +85,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
+                    <a href="product-tulip.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -95,7 +97,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
+                    <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -107,7 +109,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
+                    <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -119,7 +121,7 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
+                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
@@ -139,6 +141,15 @@
     <script src="js-files/home.js"></script>
     <script src="js-files/product.js"></script>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const flowerId = parseInt(urlParams.get('id')) || 3;
+
+            // Call the function with the specific flower ID
+            renderFlowerDetailsById(flowerId);
+        });
+    </script>
 
 </body>
 </html>
