--- a/allproducts.html
+++ b/allproducts.html
@@ -19,109 +19,8 @@
         </div>
     </header>
 <!------------------------------------------------------------------------------------------------------------------->     
-<section class="product">
-    
-    <button class="pre-btn"><img src="img/arrw.png" alt=""></button>
-    <button class="nxt-btn"><img src="img/arrw.png" alt=""></button>
-    <div class="product-container" id="flower-card">
-         <!-- <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2>Roses</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
-                <button class="addCart">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Sunflower</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">snake plant</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-gourmet.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">gourmet gift set</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-tulip.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Tulips</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">hydrangea</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">wildflower</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag">10% off</span>
-                <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">succulent</h2>
-                <p class="product-short-des">From Pobeguada</p>
-                <span class="price">₱450</span><span class="actual-price">₱500</span>
-            </div>
-        </div> -->
-    </div>
-
+    <section class="product">
+        <div class="product-container" id="flower-card"></div>
     </section>
 
     <footer></footer>
