--- a/index.html
+++ b/index.html
@@ -20,104 +20,7 @@
       <h2 class="product-category">Grand Sale</h2>
       <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
       <button class="nxt-btn"><img src="img/arrow.png" alt="" /></button>
-      <div class="product-container" id="flower-card">
-        <!-- <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2>Roses</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
-                    <button class="addCart">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Sunflower</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">snake plant</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-gourmet.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">gourmet gift set</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-tulip.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Tulips</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">hydrangea</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">wildflower</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">succulent</h2>
-                    <p class="product-short-des">From Pobeguada</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div> -->
-      </div>
+      <div class="product-container" id="flower-details"></div>
     </section>
     <!-- ---------------------collections -------------------------------------->
     <section class="collection-container">
@@ -148,6 +51,7 @@
     <script src="js-files/home.js"></script>
     <script src="js-files/footer.js"></script>
     <script src="js-files/app.js"></script>
+    <script src="js-files/buttonfunction.js"></script>
     <script src="js-files/checkout.js"></script>
     <script type="module">
       // Import the functions you need from the SDKs you need
@@ -171,5 +75,13 @@
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
     </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Call the function for the initial rendering
+            renderFlowersInRange(1,7);
+        });
+    </script>
+    
   </body>
 </html>
