--- a/plantscollection.html
+++ b/plantscollection.html
@@ -18,68 +18,9 @@
         </div>
     </header>
 <!------------------------------------------------------------------------------------------------------------------->         
-    <section class="search-results"> 
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-bonsai.html"><img src="img/bonsai.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">bonsai tree</h2>
-                    <p class="product-short-des">a short line about the boquet..</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">snake plant</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-fiddle.html"><img src="img/fiddle.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">fiddle plant</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">succulent</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">10% off</span>
-                    <a href="product-orchid.html"><img src="img/orchid.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to Cart</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">Orchid</h2>
-                    <p class="product-short-des">a short line about the boquet..</p>
-                    <span class="price">₱450</span><span class="actual-price">₱500</span>
-                </div>
-            </div>
+    <section class="search-results">
+        <div class="product-container" id="flower-details">
+            <!-- Content will be dynamically added here using JavaScript -->
         </div>
     </section>
 
@@ -90,5 +31,11 @@
     <script src="js-files/home.js"></script>
     <script src="js-files/footer.js"></script>
     <script src="js-files/app.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Call the function for the initial rendering
+            renderFlowersInRange(6, 10);
+        });
+    </script>
 </body>
 </html>
