--- a/product-5.html
+++ b/product-5.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Fiddle leaf Tree</title>
+    <title>Hydrangea</title>
     <link rel="stylesheet " href="css-files/home.css">
     <link rel="stylesheet " href="css-files/product.css">
 </head>
 <body>
     <nav class="navbar"></nav>
-    
-    <section class="product-details">
+    <!-- <section class="product-details">
         <div class="product-images">
-            <img src="img/fiddle.png" class="active" alt="">
+            <img src="img/hydrangea.png" class="active" alt="">
         </div>
         <div class="details">
-            <h2 class="product-brand">Fiddle Leaf Fig Tree</h2>
-            <p class="product-short-des">Known for its large, violin-shaped leaves, this indoor plant adds a touch of elegance to any room, making it a popular choice for home decor.
+            <h2 class="product-brand">Hydrangea</h2>
+            <p class="product-short-des">The hydrangea flower is a symbol of appreciation, elegance, and beauty. The lavish amount of blooms and the spacious spherical shape also give off an aura of abundance. Its hues symbolize peace, harmony, and love. This stunning bouquet of hydrangea flowers is sure to make anyone smile, no matter the occasion!
             </p>
             <span class="product-price">₱450</span>
             <span class="product-actual-price">₱500</span>
-            <span class="product-discount">10% off!</span>  
+            <span class="product-discount">10% off!</span>
+
             <button class="btn cart-btn">buy now</button>
             <button class="btn">add to cart</button>
         </div>
-    </section>
-
+    </section> -->
+    <div id="flower-details" class="product-details">
+        <!-- Content will be dynamically added here using JavaScript -->
+    </div>
    
 
     <!------------- Product catalog ----------------------->
@@ -34,97 +36,97 @@
         <div class="product-container">
             <div class="product-card">
                 <div class="product-image">
-                    <span class="discount-tag">15% off</span>
+                    <span class="discount-tag">10% off</span>
                     <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
                     <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet..</p>
+                    <h2 class="product-brand">Roses</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-sunflower.html"><img src="img/sunflower.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">Sunflower</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-snake.html"><img src="img/snake.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">snake plant</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-gourmet.html"><img src="img/gourmet.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">gourmet gift set</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-tulip.html"><img src="img/tulip.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">Tulips</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-hydrangea.html"><img src="img/hydrangea.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">hydrangea</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-wildflower.html"><img src="img/wildflower.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">wildflower</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <a href="product-redrose.html"><img src="img/redrose.png" class="product-thumb" alt=""></a>
-                    <button class="card-btn">Add to whishlist</button>
+                    <a href="product-succulent.html"><img src="img/succulent.png" class="product-thumb" alt=""></a>
+                    <button class="card-btn">Add to Cart</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the boquet.</p>
+                    <h2 class="product-brand">succulent</h2>
+                    <p class="product-short-des">From Pobeguada</p>
                     <span class="price">₱450</span><span class="actual-price">₱500</span>
                 </div>
             </div>
@@ -139,6 +141,15 @@
     <script src="js-files/home.js"></script>
     <script src="js-files/product.js"></script>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const flowerId = parseInt(urlParams.get('id')) || 5;
+
+            // Call the function with the specific flower ID
+            renderFlowerDetailsById(flowerId);
+        });
+    </script>
 
 </body>
 </html>
