semi working checkout page

--- a/allproducts.html
+++ b/allproducts.html
@@ -28,5 +28,6 @@
     <script src="js-files/footer.js"></script>
     <script src="js-files/home.js"></script>
     <script src="js-files/app.js"></script>
+    <script src="js-files/checkout.js"></script>
 </body>
 </html>
