--- a/flowercollection.html
+++ b/flowercollection.html
@@ -32,6 +32,7 @@
     <script src="js-files/home.js"></script>
     <script src="js-files/footer.js"></script>
     <script src="js-files/app.js"></script>
+    <script src="js-files/checkout.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Call the function for the initial rendering
